== ChangeLog
=== vNEXT
- Added StackTrace, TypeDescription and ExecutingProcId to ErrorLog.GetErrors method. This should provide some more detail than what K2 workspace currently provides.


=== v1.6.11
- Improved Error handling and corrected mistake in error messages.
- Added code to make sure that if a service instance property is not set, we still handle this correctly with either an exception or a expected default.
- The above two fixes are implemented to avoid a 'KeyNotFound' exception that isn't 100% confirmed to be resolved yet.
- Added functionality to set the process instance folio in the ProcessInstanceClient. This requires admin premissions on the process.

=== v1.6.10
==== ADO.NET Query updates:
- Refactored code
- Changed logic to pass smartobject properties to filter a query. See link:ADOSMOQuery.adoc[ADO SMO Query service object] for more information.
- Added support to read queries from the xml file.

=== v1.6.9
- We now version number every build. this helps with identifying which build a user/customer has.
- Even better exception handling, we really had a silly bug there
- We removed all the VAR's and did some code cleanup.

=== v1.6.8
- Slightly better exception handling in UserSO

=== v1.6.7
- Added Out of Office to Client API

=== v1.6.6
- Added link:ADOSMOQuery.adoc[ADO SMO Query service object].
- K2Field.K2NE.ServiceBroker.GetBoolProperty() method allows to use 1/0, Yes/No values as boolean, instead of True/False only.

=== v1.6.5
- Add List Activities method

=== v1.6.4
- Added Redirect to Client API

=== v1.6.3
- Added powershell installer.
- Removed choco installer
- Created release folder after build.

=== v1.6.2
- Better exception handling within the AD parallel methods to report on which AD is causing the error.
- Added custom properties to Active Directory options.

=== v1.6.1
- Added ListShares/ListUserShares to get all the delegates from the OOF